--- a/src/app/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx-creator/bmx-creator.component.scss
@@ -87,6 +87,23 @@
         // transform: scale(1.1);
         box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);
     }
+    .menu-active {
+        cursor: pointer;
+        height: 89px;
+        display: flex;
+        flex-direction: row;
+        margin: 1px 0px;
+        align-items: center;
+        position: relative;
+        color: #353f4b;
+        background-color: #bdbdbd;
+        // transform: scale(1.1);
+        box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);
+    }
+}
+
+.development-border{
+    border: blue 1px solid;
 }
 
 // *******************************************************************************************
