--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -103,40 +103,100 @@
 
 
     <!-- CREATE/EDIT COMPONENT  🧠-->
-    <div class="create-edit"  *ngIf="true" style="border: hotpink solid 1px; width: 60%; height: 100vh;overflow-y: scroll;">
-
-        <div *ngFor="let bmxItem of brandMatrixObjects" style="display: flex;flex-direction: column;">
-        <!-- BMX HEADER 😋 -->
-        <div class="development-border" style="height: 100px;display: flex;flex-direction: row;justify-content: space-between;align-items: center;
+    <div class="create-edit" *ngIf="!isMenuActive4"  dragula="TASKS"  [(dragulaModel)]="brandMatrixObjects" (dragulaModelChange)="checkDragEvetn($event);brandMatrixObjects = $event">
+        
+        <div *ngFor="let bmxItem of brandMatrixObjects; let i = index;" 
+            style="display: flex;flex-direction: column;margin: 10px;">
+            <!-- BMX HEADER 😋 -->
+            <div class="emoji-handle" >
+                <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                  <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+                  <path d="M0 0h24v24H0z" fill="none"></path>
+                </svg>
+              </div>
+            <div *ngIf="bmxItem.componentType === 'logo-header'" class="development-border" style="cursor: pointer;height: 100px;display: flex;flex-direction: row;justify-content: space-between;align-items: center;
             font-size: 60px;">
-            <div>
-                <img style="width: 127px;margin-left: 10px;" src="./assets/img/bi-logo-with-tagline.svg">
+                <div>
+                    <img style="width: 127px;margin-left: 20px;" src="./assets/img/bi-logo-with-tagline.svg">
+                </div>
+                <div><span style="color: #253b7d;">Brand</span> <span style="color: #253b7d;">Matrix</span></div>
+                <div>
+                    <img style="width: 127px;margin-right: 20px;" src="./assets/img/bmx/BD.png">
+                </div>
+
             </div>
-            <div><span style="color: grey;">Brand</span> <span style="color: blue;">Matrix</span></div>
-            <div>
-                <img style="width: 127px;margin-right: 10px;" src="./assets/img/bmx/BD.png">
+            <!--😋 END BMX HEADER  -->
+
+            <!-- BMX PARAGRAPH EDITOR 📑 -->
+            <div *ngIf="bmxItem.componentType === 'text-editor'" class="development-border" style="margin-top: 10px;">
+                <div style="margin: 30px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+                <ckeditor *ngIf="i === selectedIndex" id="txtTexto" class="ckeditorcev"
+                    style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
+                    [(ngModel)]="model.editorData"(change)="sendTextHtml(i);" [data]="dataEditor" [config]="ckconfig"></ckeditor>
+
+                <button *ngIf="i === selectedIndex" (click)="selectedIndex = '';" mat-icon-button style="outline: none;position: relative;float: right;
+                    margin: 20px;top: -444px">
+                    <mat-icon style="font-size: 40px;">cancel</mat-icon>
+                </button>
+                <button *ngIf="i === selectedIndex" (click)="sendTextHtml(i);" mat-icon-button 
+                style="outline: none;position: relative;float: right;margin: 20px;top: -444px">
+                    <mat-icon style="font-size: 40px;">save</mat-icon>
+                </button>
+                <button *ngIf="i !== selectedIndex" mat-icon-button
+                    style="outline: none;position: relative;float: right;margin: 20px;" (click)="selectedIndex = i">
+                    <mat-icon style="font-size: 40px;">edit</mat-icon>
+                </button>
             </div>
+            <!-- 📑 END BMX PARAGRAPH EDITOR -->
+
+
+            <!-- LIENAR SCALE -->
+            <div *ngIf="bmxItem.componentType === 'ranking-scale'" style="display: flex;flex-direction: column;">
+
+
+                <div *ngFor="let testName of testNames">
+                    <label for="html">{{testName.name}}</label>
+                    <div
+                        style="display: flex;flex-direction: row;border: olive solid 1px;text-align: center;justify-content: start;align-content: center;">
+                        <input type="radio" id="1" [name]="testName.name" value="1">
+                        <label for="1">1</label>
+                        <input type="radio" id="2" [name]="testName.name" value="2">
+                        <label for="2">2</label>
+                        <input type="radio" id="3" [name]="testName.name" value="3">
+                        <label for="3">3</label>
+                    </div>
+                </div>
+
+            </div>
+            <!-- END LIENAR SCALE -->
 
         </div>
-        <!--😋 END BMX HEADER  -->
 
-        <!-- BMX PARAGRAPH EDITOR 📑 -->
-        <div class="development-border" style="margin: 10px;">           
-            <div style="margin: 30px;" [innerHTML]="sampleHtml | safe: 'html'"></div>
-            <ckeditor *ngIf="isCkeditorOn" id="txtTexto" class="ckeditorcev" [ngModelOptions]="{standalone: true}"
-                [(ngModel)]="model.editorData" [data]="dataEditor" [config]="ckconfig"></ckeditor>
-            <button (click)="sendTextHtml();isCkeditorOn = false">click me</button>
-            <button *ngIf="!isCkeditorOn" mat-icon-button style="outline: none;position: relative;" (click)="isCkeditorOn = true">
-                <mat-icon style="font-size: 40px;">edit</mat-icon>
+    </div>
+
+    <div class="create-edit" *ngIf="!isMenuActive4" style="border: pink solid 1px; width: 25%; height: 100vh;">
+    
+        <div *ngIf="true" class="" style="display: flex;flex-direction: column;margin-top: 50px;">
+            <button (click)="createNewBmxComponent()" mat-icon-button matTooltip="home" matTooltipPosition="right">
+                <mat-icon  class="full-icon">note_add</mat-icon>
+            </button>
+            <button  matTooltip="full-screen" matTooltipPosition="right" mat-icon-button color="warn"
+                aria-label="aria">
+                <mat-icon class="full-icon">aspect_ratio</mat-icon>
+            </button>
+            <button  matTooltip="search" matTooltipPosition="right" mat-icon-button
+                color="warn" aria-label="aria">
+                <mat-icon class="full-icon">search</mat-icon>
+            </button>
+            <button *ngIf="!true" mat-icon-button matTooltip="slide comments" matTooltipPosition="right">
+                <mat-icon class="full-icon">comment</mat-icon>
+            </button>
+            <button *ngIf="!false" matTooltip="qr code" matTooltipPosition="right" mat-icon-button
+                aria-label="aria">
+                <mat-icon class="full-icon">qr_code</mat-icon>
             </button>
         </div>
-        <!-- 📑 END BMX PARAGRAPH EDITOR -->
-
     </div>
-
-    </div>
-
-    <div class="create-edit" *ngIf="true" style="border: pink solid 1px; width: 25%; height: 100vh;"></div>
 
     <!--🧠 END CREATE/EDIT COMPONENT-->
 
