--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex;flex-direction: row;">
+<div class="main-container">
     <div style="display: flex;border:brown 0px solid;width: 25%; height: 100vh;">
 
         <!-- LOGO BRANDING 🎭-->
@@ -19,7 +19,7 @@
         <!--🎭 END LOGO BRANDING -->
 
         <div class="welcome">
-            <button mat-icon-button style="background-color: white;margin: 0 20px 0 10px">
+            <button mat-icon-button style="background-color: white;margin: 0 20px 0 20px">
                 <mat-icon>account_circle</mat-icon>
             </button>
             <div style="color: white; text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
@@ -104,22 +104,36 @@
 
 
     <!-- CREATE/EDIT COMPONENT  🧠-->
+
     <div class="create-edit" *ngIf="!isMenuActive4" dragula="TASKS" [(dragulaModel)]="brandMatrixObjects"
         (dragulaModelChange)="checkDragEvetn($event);brandMatrixObjects = $event">
+
+        <div *ngIf="true" class="mainContainerPresent" style="position: absolute;
+        z-index: 1;
+        width: 1011px;">
+            <mat-card>
+                <mat-label>SalesBoardProjectList</mat-label>
+                <mat-select>
+                    <mat-option *ngFor="let settingsList of settingsData.SalesBoardProjectList" [value]="settingsList">
+                        {{settingsList}}
+                    </mat-option> </mat-select>
+            </mat-card>
+            
+            <mat-card>
+                <mat-label>DepartmentList</mat-label>
+                <mat-select>
+                    <mat-option *ngFor="let settingsList of settingsData.DepartmentList" [value]="settingsList">
+                        {{settingsList}}
+                    </mat-option> </mat-select>
+            </mat-card>
+        </div>
 
         <div *ngFor="let bmxItem of brandMatrixObjects; let i = index"
             style="display: flex;flex-direction: column;margin: 10px;">
             <!-- BMX HEADER 😋 -->
 
-
-
-            <div *ngIf="bmxItem.componentType === 'logo-header'" class="development-border" style="cursor: pointer;height: 100px;display: flex;flex-direction: row;justify-content: space-between;align-items: center;
-            font-size: 60px;position: relative;">
-
-                <div class="emoji-handle">
-                    .
-                </div>
-
+            <div *ngIf="bmxItem.componentType === 'logo-header'" class="header development-border">
+                <div class="emoji-handle">.</div>
                 <div>
                     <img style="width: 127px;margin-left: 20px;" src="./assets/img/bi-logo-with-tagline.svg">
                 </div>
@@ -127,32 +141,20 @@
                 <div>
                     <img style="width: 127px;margin-right: 20px;" src="./assets/img/bmx/BD.png">
                 </div>
-
             </div>
             <!--😋 END BMX HEADER  -->
 
             <!-- BMX PARAGRAPH EDITOR 📑 -->
-            <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph development-border"
-                style="margin-top: 10px;position: relative;">
-
-
-                <div class="emoji-handle" >
-                  .
-                  </div>
-
-
-
+            <div *ngIf="bmxItem.componentType === 'text-editor'" class="paragraph development-border">
+                <div class="emoji-handle">.</div>
                 <div style="margin: 30px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
                 <ckeditor *ngIf="i === selectedIndex" id="txtTexto" class="ckeditorcev"
                     style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
-                    [(ngModel)]="model.editorData" (change)="sendTextHtml(i);" [data]="dataEditor" [config]="ckconfig">
+                    [(ngModel)]="bmxItem.componentText" [data]="dataEditor" [config]="ckconfig">
                 </ckeditor>
 
                 <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
                     <mat-icon style="font-size: 25px;">cancel</mat-icon>
-                </button>
-                <button *ngIf="i === selectedIndex" class="save" (click)="sendTextHtml(i);" mat-icon-button>
-                    <mat-icon style="font-size: 25px;">save</mat-icon>
                 </button>
                 <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
                     <mat-icon style="font-size: 25px;">edit</mat-icon>
@@ -162,26 +164,39 @@
 
 
             <!-- LINEAR SCALE -->
-            <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="development-border" style="display: flex;flex-direction: column;position: relative;">
+            <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="development-border"
+                style="display: flex;flex-direction: column;position: relative;">
+                <div class="emoji-handle">.</div>
+                <div *ngFor="let testName of testNames" style="margin:10px 10px;">
+                    <div class="test-name-table">
+                        <label style="width: 10%;text-align: start;margin-left: 10px;"
+                            for="html">{{testName.name}}</label>
+                        <label style="width: 10%;text-align: start;margin-left: 10px;"
+                            for="html">{{testName.rationale}}</label>
 
-                <div class="emoji-handle">
-                    .
-                </div>
-
-                <div *ngFor="let testName of testNames" >
-                    <label for="html">{{testName.name}}</label>
-                    <div
-                        style="display: flex;flex-direction: row;border: olive solid 1px;text-align: center;justify-content: start;align-content: center;">
-                        <input type="radio" id="1" [name]="testName.name" value="1">
+                        <button mat-raised-button color="primary" class="edit-icon">
+                            1
+                        </button>
+                        <button mat-raised-button color="primary" class="edit-icon">
+                            2
+                        </button>
+                        <button mat-raised-button color="primary" class="edit-icon">
+                            3
+                        </button>
+                        <button mat-raised-button color="primary" class="edit-icon">
+                            4
+                        </button>
+                        <!-- <input type="radio" id="1" [name]="testName.name" value="1">
                         <label for="1">1</label>
                         <input type="radio" id="2" [name]="testName.name" value="2">
                         <label for="2">2</label>
                         <input type="radio" id="3" [name]="testName.name" value="3">
-                        <label for="3">3</label>
+                        <label for="3">3</label> -->
                     </div>
-                </div>
+                </div>x
 
             </div>
+
             <!-- END LINEAR SCALE -->
 
         </div>
